--- a/docs/tutorials/qopt-example.ipynb
+++ b/docs/tutorials/qopt-example.ipynb
@@ -18,8 +18,7 @@
    "metadata": {},
    "source": [
     "# Solve utility-scale quantum optimization problems\n",
-    "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*\n",
-    "\n"
+    "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -80,7 +79,7 @@
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import Session, EstimatorV2 as Estimator\n",
-    "from qiskit_ibm_runtime import SamplerV2 as Sampler\n"
+    "from qiskit_ibm_runtime import SamplerV2 as Sampler"
    ]
   },
   {
@@ -144,7 +143,14 @@
     "\n",
     "graph = rx.PyGraph()\n",
     "graph.add_nodes_from(np.arange(0, n, 1))\n",
-    "edge_list = [(0, 1, 1.0), (0, 2, 1.0), (0, 4, 1.0), (1, 2, 1.0), (2, 3, 1.0), (3, 4, 1.0)]\n",
+    "edge_list = [\n",
+    "    (0, 1, 1.0),\n",
+    "    (0, 2, 1.0),\n",
+    "    (0, 4, 1.0),\n",
+    "    (1, 2, 1.0),\n",
+    "    (2, 3, 1.0),\n",
+    "    (3, 4, 1.0),\n",
+    "]\n",
     "graph.add_edges_from(edge_list)\n",
     "draw_graph(graph, node_size=600, with_labels=True)"
    ]
@@ -290,6 +296,7 @@
     "        pauli_list.append((\"ZZ\", [edge[0], edge[1]], weight))\n",
     "    return pauli_list\n",
     "\n",
+    "\n",
     "max_cut_paulis = build_max_cut_paulis(graph)\n",
     "cost_hamiltonian = SparsePauliOp.from_list(max_cut_paulis)\n",
     "print(\"Cost Function Hamiltonian:\", cost_hamiltonian)"
@@ -343,7 +350,7 @@
     "circuit = QAOAAnsatz(cost_operator=cost_hamiltonian, reps=2)\n",
     "circuit.measure_all()\n",
     "\n",
-    "circuit.draw('mpl')"
+    "circuit.draw(\"mpl\")"
    ]
   },
   {
@@ -425,15 +432,16 @@
    "source": [
     "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")\n",
     "print(backend)\n",
     "\n",
     "# Create pass manager for transpilation\n",
-    "pm = generate_preset_pass_manager(optimization_level=3,\n",
-    "                                    backend=backend)\n",
+    "pm = generate_preset_pass_manager(optimization_level=3, backend=backend)\n",
     "\n",
     "candidate_circuit = pm.run(circuit)\n",
-    "candidate_circuit.draw('mpl', fold=False, idle_wires=False)"
+    "candidate_circuit.draw(\"mpl\", fold=False, idle_wires=False)"
    ]
   },
   {
@@ -473,7 +481,7 @@
    "outputs": [],
    "source": [
     "initial_gamma = np.pi\n",
-    "initial_beta = np.pi/2\n",
+    "initial_beta = np.pi / 2\n",
     "init_params = [initial_beta, initial_beta, initial_gamma, initial_gamma]"
    ]
   },
@@ -508,7 +516,6 @@
    "outputs": [],
    "source": [
     "def cost_func_estimator(params, ansatz, hamiltonian, estimator):\n",
-    "\n",
     "    # transform the observable defined on virtual qubits to\n",
     "    # an observable defined on all physical qubits\n",
     "    isa_hamiltonian = hamiltonian.apply_layout(ansatz.layout)\n",
@@ -520,7 +527,6 @@
     "    cost = results.data.evs\n",
     "\n",
     "    objective_func_vals.append(cost)\n",
-    "\n",
     "\n",
     "    return cost"
    ]
@@ -546,7 +552,7 @@
     }
    ],
    "source": [
-    "objective_func_vals = [] # Global variable\n",
+    "objective_func_vals = []  # Global variable\n",
     "with Session(backend=backend) as session:\n",
     "    # If using qiskit-ibm-runtime<0.24.0, change `mode=` to `session=`\n",
     "    estimator = Estimator(mode=session)\n",
@@ -631,7 +637,7 @@
    ],
    "source": [
     "optimized_circuit = candidate_circuit.assign_parameters(result.x)\n",
-    "optimized_circuit.draw('mpl', fold=False, idle_wires=False)"
+    "optimized_circuit.draw(\"mpl\", fold=False, idle_wires=False)"
    ]
   },
   {
@@ -659,13 +665,13 @@
     "sampler.options.twirling.enable_gates = True\n",
     "sampler.options.twirling.num_randomizations = \"auto\"\n",
     "\n",
-    "pub= (optimized_circuit, )\n",
+    "pub = (optimized_circuit,)\n",
     "job = sampler.run([pub], shots=int(1e4))\n",
     "counts_int = job.result()[0].data.meas.get_int_counts()\n",
     "counts_bin = job.result()[0].data.meas.get_counts()\n",
     "shots = sum(counts_int.values())\n",
-    "final_distribution_int = {key: val/shots for key, val in counts_int.items()}\n",
-    "final_distribution_bin = {key: val/shots for key, val in counts_bin.items()}\n",
+    "final_distribution_int = {key: val / shots for key, val in counts_int.items()}\n",
+    "final_distribution_bin = {key: val / shots for key, val in counts_bin.items()}\n",
     "print(final_distribution_int)"
    ]
   },
@@ -698,6 +704,7 @@
     "def to_bitstring(integer, num_bits):\n",
     "    result = np.binary_repr(integer, width=num_bits)\n",
     "    return [int(digit) for digit in result]\n",
+    "\n",
     "\n",
     "keys = list(final_distribution_int.keys())\n",
     "values = list(final_distribution_int.values())\n",
@@ -784,8 +791,10 @@
     "# auxiliary function to plot graphs\n",
     "def plot_result(G, x):\n",
     "    colors = [\"tab:grey\" if i == 0 else \"tab:purple\" for i in x]\n",
-    "    pos, default_axes = rx.spring_layout(G), plt.axes(frameon=True)\n",
-    "    rx.visualization.mpl_draw(G, node_color=colors, node_size=100, alpha=0.8, pos=pos)\n",
+    "    pos, _default_axes = rx.spring_layout(G), plt.axes(frameon=True)\n",
+    "    rx.visualization.mpl_draw(\n",
+    "        G, node_color=colors, node_size=100, alpha=0.8, pos=pos\n",
+    "    )\n",
     "\n",
     "\n",
     "plot_result(graph, most_likely_bitstring)"
@@ -815,12 +824,17 @@
    ],
    "source": [
     "def evaluate_sample(x: Sequence[int], graph: rx.PyGraph) -> float:\n",
-    "    assert len(x) == len(list(graph.nodes())), \"The length of x must coincide with the number of nodes in the graph.\"\n",
-    "    return sum(x[u] * (1 - x[v]) + x[v] * (1 - x[u]) for u, v in list(graph.edge_list()))\n",
+    "    assert len(x) == len(\n",
+    "        list(graph.nodes())\n",
+    "    ), \"The length of x must coincide with the number of nodes in the graph.\"\n",
+    "    return sum(\n",
+    "        x[u] * (1 - x[v]) + x[v] * (1 - x[u])\n",
+    "        for u, v in list(graph.edge_list())\n",
+    "    )\n",
     "\n",
     "\n",
-    "cut_value= evaluate_sample(most_likely_bitstring, graph)\n",
-    "print('The value of the cut is:', cut_value)"
+    "cut_value = evaluate_sample(most_likely_bitstring, graph)\n",
+    "print(\"The value of the cut is:\", cut_value)"
    ]
   },
   {
@@ -943,7 +957,7 @@
     "circuit_100 = QAOAAnsatz(cost_operator=cost_hamiltonian_100, reps=1)\n",
     "circuit_100.measure_all()\n",
     "\n",
-    "circuit_100.draw('mpl', fold=False, scale=0.2, idle_wires=False)"
+    "circuit_100.draw(\"mpl\", fold=False, scale=0.2, idle_wires=False)"
    ]
   },
   {
@@ -974,11 +988,10 @@
     }
    ],
    "source": [
-    "pm = generate_preset_pass_manager(optimization_level=3,\n",
-    "                                    backend=backend)\n",
+    "pm = generate_preset_pass_manager(optimization_level=3, backend=backend)\n",
     "\n",
     "candidate_circuit_100 = pm.run(circuit_100)\n",
-    "candidate_circuit_100.draw('mpl', fold=False, scale=0.1, idle_wires=False)"
+    "candidate_circuit_100.draw(\"mpl\", fold=False, scale=0.1, idle_wires=False)"
    ]
   },
   {
@@ -1029,10 +1042,10 @@
    ],
    "source": [
     "initial_gamma = np.pi\n",
-    "initial_beta = np.pi/2\n",
+    "initial_beta = np.pi / 2\n",
     "init_params = [initial_beta, initial_gamma]\n",
     "\n",
-    "objective_func_vals = [] # Global variable\n",
+    "objective_func_vals = []  # Global variable\n",
     "with Session(backend=backend) as session:\n",
     "    # If using qiskit-ibm-runtime<0.24.0, change `mode=` to `session=`\n",
     "    estimator = Estimator(mode=session)\n",
@@ -1082,7 +1095,7 @@
    ],
    "source": [
     "optimized_circuit_100 = candidate_circuit_100.assign_parameters(result.x)\n",
-    "optimized_circuit_100.draw('mpl', fold=False, idle_wires=False)"
+    "optimized_circuit_100.draw(\"mpl\", fold=False, idle_wires=False)"
    ]
   },
   {
@@ -1111,13 +1124,15 @@
     "sampler.options.twirling.num_randomizations = \"auto\"\n",
     "\n",
     "\n",
-    "pub= (optimized_circuit_100, )\n",
+    "pub = (optimized_circuit_100,)\n",
     "job = sampler.run([pub], shots=int(1e4))\n",
     "\n",
     "counts_int = job.result()[0].data.meas.get_int_counts()\n",
     "counts_bin = job.result()[0].data.meas.get_counts()\n",
     "shots = sum(counts_int.values())\n",
-    "final_distribution_100_int = {key: val/shots for key, val in counts_int.items()}"
+    "final_distribution_100_int = {\n",
+    "    key: val / shots for key, val in counts_int.items()\n",
+    "}"
    ]
   },
   {
@@ -1184,15 +1199,21 @@
     }
    ],
    "source": [
-    "_PARITY = np.array([-1 if bin(i).count(\"1\") % 2 else 1 for i in range(256)], dtype=np.complex128)\n",
+    "_PARITY = np.array(\n",
+    "    [-1 if bin(i).count(\"1\") % 2 else 1 for i in range(256)],\n",
+    "    dtype=np.complex128,\n",
+    ")\n",
     "\n",
     "\n",
     "def evaluate_sparse_pauli(state: int, observable: SparsePauliOp) -> complex:\n",
     "    \"\"\"Utility for the evaluation of the expectation value of a measured state.\"\"\"\n",
     "    packed_uint8 = np.packbits(observable.paulis.z, axis=1, bitorder=\"little\")\n",
-    "    state_bytes = np.frombuffer(state.to_bytes(packed_uint8.shape[1], \"little\"), dtype=np.uint8)\n",
+    "    state_bytes = np.frombuffer(\n",
+    "        state.to_bytes(packed_uint8.shape[1], \"little\"), dtype=np.uint8\n",
+    "    )\n",
     "    reduced = np.bitwise_xor.reduce(packed_uint8 & state_bytes, axis=1)\n",
     "    return np.sum(observable.coeffs * _PARITY[reduced])\n",
+    "\n",
     "\n",
     "def best_solution(samples, hamiltonian):\n",
     "    \"\"\"Find solution with lowest cost\"\"\"\n",
@@ -1207,6 +1228,7 @@
     "            min_sol = candidate_sol\n",
     "\n",
     "    return min_sol\n",
+    "\n",
     "\n",
     "best_sol_100 = best_solution(final_distribution_100_int, cost_hamiltonian_100)\n",
     "best_sol_bitstring_100 = to_bitstring(int(best_sol_100), len(graph_100))\n",
@@ -1267,8 +1289,8 @@
     }
    ],
    "source": [
-    "cut_value_100= evaluate_sample(best_sol_bitstring_100, graph_100)\n",
-    "print('The value of the cut is:', cut_value_100)"
+    "cut_value_100 = evaluate_sample(best_sol_bitstring_100, graph_100)\n",
+    "print(\"The value of the cut is:\", cut_value_100)"
    ]
   },
   {
@@ -1294,13 +1316,18 @@
     "\n",
     "\n",
     "def plot_cdf(dist, ax, title):\n",
-    "    _plot_cdf(dist, ax, \"C1\",)\n",
+    "    _plot_cdf(\n",
+    "        dist,\n",
+    "        ax,\n",
+    "        \"C1\",\n",
+    "    )\n",
     "    ax.vlines(min(list(dist.keys())), 0, 1, \"C1\", linestyle=\"--\")\n",
     "\n",
     "    ax.set_title(title)\n",
     "    ax.set_xlabel(\"Objective function value\")\n",
     "    ax.set_ylabel(\"Cumulative distribution function\")\n",
     "    ax.grid(alpha=0.3)\n",
+    "\n",
     "\n",
     "# auxiliary function to convert bit-strings to objective values\n",
     "def samples_to_objective_values(samples, hamiltonian):\n",
@@ -1322,7 +1349,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_dist = samples_to_objective_values(final_distribution_100_int, cost_hamiltonian_100)"
+    "result_dist = samples_to_objective_values(\n",
+    "    final_distribution_100_int, cost_hamiltonian_100\n",
+    ")"
    ]
   },
   {
@@ -1370,11 +1399,11 @@
    "id": "b4a9cf43",
    "metadata": {},
    "source": [
-     "## Tutorial survey\n",
-     "\n",
-     "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
-     "\n",
-     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cNHi0H1YIagQZ9Q)"
+    "## Tutorial survey\n",
+    "\n",
+    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cNHi0H1YIagQZ9Q)"
    ]
   },
   {
@@ -1387,7 +1416,6 @@
   }
  ],
  "metadata": {
-  "title": "Solve utility-scale quantum optimization problems",
   "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
   "kernelspec": {
    "display_name": "Python 3",
@@ -1404,8 +1432,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
-  }
+   "version": "3"
+  },
+  "title": "Solve utility-scale quantum optimization problems"
  },
  "nbformat": 4,
  "nbformat_minor": 5
