--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Grover's algorithm\n",
-    "*Usage estimate: under 1 minute on IBM Nairobi (NOTE: This is an estimate only. Your runtime may vary.)*\n"
+    "*Usage estimate: under 1 minute on IBM Nairobi (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
@@ -63,6 +63,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "\n",
+    "\n",
     "def grover_oracle(marked_states):\n",
     "    \"\"\"Build a Grover oracle for multiple marked states\n",
     "\n",
@@ -85,7 +86,11 @@
     "        # Flip target bit-string to match Qiskit bit-ordering\n",
     "        rev_target = target[::-1]\n",
     "        # Find the indices of all the '0' elements in bit-string\n",
-    "        zero_inds = [ind for ind in range(num_qubits) if rev_target.startswith(\"0\", ind)]\n",
+    "        zero_inds = [\n",
+    "            ind\n",
+    "            for ind in range(num_qubits)\n",
+    "            if rev_target.startswith(\"0\", ind)\n",
+    "        ]\n",
     "        # Add a multi-controlled Z-gate with pre- and post-applied X-gates (open-controls)\n",
     "        # where the target bit-string has a '0' entry\n",
     "        qc.x(zero_inds)\n",
@@ -125,7 +130,9 @@
    "source": [
     "# To run on hardware, select the backend with the fewest number of jobs in the queue\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits = 127)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=127\n",
+    ")\n",
     "backend.name"
    ]
   },
@@ -216,7 +223,8 @@
    "outputs": [],
    "source": [
     "optimal_num_iterations = math.floor(\n",
-    "    math.pi / (4 * math.asin(math.sqrt(len(marked_states) / 2**grover_op.num_qubits)))\n",
+    "    math.pi\n",
+    "    / (4 * math.asin(math.sqrt(len(marked_states) / 2**grover_op.num_qubits)))\n",
     ")"
    ]
   },
@@ -357,11 +365,11 @@
    "id": "2bdde144",
    "metadata": {},
    "source": [
-     "## Tutorial survey\n",
-     "\n",
-     "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
-     "\n",
-     "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_0j1SlLPkooyeFJY)"
+    "## Tutorial survey\n",
+    "\n",
+    "Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_0j1SlLPkooyeFJY)"
    ]
   },
   {
@@ -374,10 +382,9 @@
   }
  ],
  "metadata": {
-  "title": "Grover's algorithm",
   "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
   "kernelspec": {
-   "display_name": "ibm-learn-cts",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -391,8 +398,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  }
+   "version": "3"
+  },
+  "title": "Grover's algorithm"
  },
  "nbformat": 4,
  "nbformat_minor": 5
