--- a/docs/guides/install-c-api.mdx
+++ b/docs/guides/install-c-api.mdx
@@ -2,6 +2,7 @@
 title: Install the Qiskit C API
 description: How to install and use the Qiskit C API as standalone library
 ---
+{/* cspell:ignore pythonlib */}
 
 # Install the Qiskit C API
 
