--- a/docs/guides/invite-and-manage-users.mdx
+++ b/docs/guides/invite-and-manage-users.mdx
@@ -23,7 +23,7 @@ If a user has a previously existing IBM Cloud account, follow the instructions i
 1. First, ensure you have the correct account and region selected in the account and region switchers in the header.
 1. Select [*Access management*](https://quantum.cloud.ibm.com/users) from the main menu.
 1. On the Users tab, click  "Invite user".
-1. Enter the users' email adddresses and optionally assign the invited users to access groups.
+1. Enter the users' email addresses and optionally assign the invited users to access groups.
 1. The user will receive an invitation to create an IBM Cloud account and join the instance. After they accept the invitation, they will see a new account in their account switcher at the top of the IBM Quantum Platform page.
 
 
