--- a/docs/guides/qasm-feature-table.mdx
+++ b/docs/guides/qasm-feature-table.mdx
@@ -4,6 +4,7 @@ description: A table of the language features included in OpenQASM 3.
 ---
 
 {/* cspell:ignore durationof */}
+{/* cspell:ignore negctrl */}
 
 # OpenQASM 3 feature table
 
@@ -69,7 +70,7 @@ Key:
 | `input`                        | ❌       |                                                                                                                           |
 | `output`                       | ❌       |                                                                                                                           |
 
-## Next steps 
+## Next steps
 
 <Admonition type="tip" title="Recommendations">
     - Learn how to generate OpenQASM code in the [Explore gates and circuits with the Quantum Composer](https://learning.quantum.ibm.com/tutorial/explore-gates-and-circuits-with-the-quantum-composer) tutorial.
