--- a/docs/tutorials/grovers-algorithm.ipynb
+++ b/docs/tutorials/grovers-algorithm.ipynb
@@ -383,6 +383,7 @@
  ],
  "metadata": {
   "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
+  "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
