--- a/docs/tutorials/qopt-example.ipynb
+++ b/docs/tutorials/qopt-example.ipynb
@@ -1418,6 +1418,7 @@
  ],
  "metadata": {
   "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
+  "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
