--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -29,7 +29,7 @@
     "## Background\n",
     "\n",
     "This notebook introduces advanced techniques to improve the performance of the **Quantum Approximate Optimization Algorithm (QAOA)** with a large number of qubits.\n",
-    "Please see this [notebook](https://github.ibm.com/IBM-Q-General/ibm-quantum-learning-enablement/blob/main/tutorials/qaoa-utility-scale/qopt_example.ipynb) for an introduction to QAOA.\n",
+    "Please see [Solve utility-scale quantum optimization problems](/tutorials/qopt-example) for an introduction to QAOA.\n",
     "\n",
     "The advanced techniques in this notebook include:\n",
     "\n",
