--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -18,6 +18,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore multichip, interchip */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9429c31d-84b1-4547-9227-0b2fcf8a0193",
    "metadata": {},
    "source": [
