--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "139ac1d5-3727-4f44-a26c-0d8a1d8a58f2",
    "metadata": {
     "tags": [
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
-    "# It gets these details programatically so we can test this notebook\n",
+    "# It gets these details programmatically so we can test this notebook\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit.circuit.random import random_circuit\n",
     "\n",
