--- a/docs/guides/qiskit-addons-mpf.ipynb
+++ b/docs/guides/qiskit-addons-mpf.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore Carrera, Multiproduct */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "67e54fee-28ed-4ebe-bcb8-715aa06721a1",
    "metadata": {},
    "source": [
