--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore mactex, backgroundcolor, lightgreen */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8d75dc24-b8d2-45f8-830b-48e45f794a31",
    "metadata": {},
    "source": [
