--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2109403a-5710-436d-ae0c-8897d8e32ee7",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8f25160-5130-4913-9330-648444d5c77f",
    "metadata": {},
    "source": [
