--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -400,7 +400,7 @@
     "* **Error suppression** by adding single-qubit gates to suppress noise with dynamical decoupling.\n",
     "\n",
     "\n",
-    "More information about transpilation is available in our [documentation](https://docs.quantum.ibm.com/transpile).\n",
+    "More information about transpilation is available in our [documentation](/guides/transpile).\n",
     "\n",
     "The following code transforms and optimizes the abstract circuit into a format that is ready for execution on one of devices accessible through the cloud using the **Qiskit IBM Runtime service**."
    ]
@@ -502,7 +502,7 @@
    "source": [
     "#### Run\n",
     "\n",
-    "The primitives offer a variety of [execution modes](https://docs.quantum.ibm.com/run/execution-modes) to schedule workloads on quantum devices, and a QAOA workflow runs iteratively in a session.\n",
+    "The primitives offer a variety of [execution modes](/guides/execution-modes) to schedule workloads on quantum devices, and a QAOA workflow runs iteratively in a session.\n",
     "\n",
     "![Illustration showing the behavior of Single job, Batch, and Session runtime modes.](/images/tutorials/quantum-approximate-optimization-algorithm/runtime-modes.avif)\n",
     "\n",
@@ -967,7 +967,7 @@
    "metadata": {},
    "source": [
     "### Step 2: Optimize problem for quantum execution\n",
-    "To scale the circuit optimization step to utility-scale problems, you can take advantage of the high performance transpilation strategies introduced in Qiskit SDK v1.0. Other tools include the new transpiler service with [AI enhanced transpiler passes](https://docs.quantum.ibm.com/transpile/ai-transpiler-passes)."
+    "To scale the circuit optimization step to utility-scale problems, you can take advantage of the high performance transpilation strategies introduced in Qiskit SDK v1.0. Other tools include the new transpiler service with [AI enhanced transpiler passes](/guides/ai-transpiler-passes)."
    ]
   },
   {
