--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -5,10 +5,14 @@ description: Migrate to using the new IBM Quantum Platform (early access) for Op
 
 # Migrate to the new IBM Quantum Platform (early access)
 
-This guide is for users who do not have Premium access and want to start using the updated version of IBM Quantum&reg; Platform (which runs on IBM Cloud&reg;). If you have Premium access, contact your administrator for instructions.
+Open and Pay-as-you-go Standard Plan users are encouraged to start exploring the early access version of the platform today, as IBM Quantum Platform Classic will be sunset on 1 July, 2025.
+
+Premium Plan, Dedicated Service, and Startup Program users should wait to receive guidance from their administrators in the coming weeks.
+
+This guide is for users who do not have Premium access and want to start using the upgraded version of IBM Quantum&reg; Platform (which runs on IBM Cloud&reg;).
 
 <Admonition type="caution" title="Important">
-The [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is in **early access** mode.  Therefore, you can log on, create instances, run jobs, and so on, but some functions are not available yet.  If you need to use functions that are not yet available, use [IBM Quantum Platform Classic](https://quantum.ibm.com/) or [Qiskit Runtime on IBM Cloud](https://cloud.ibm.com/quantum) instead.
+The [upgraded version of IBM Quantum Platform](https://quantum.cloud.ibm.com/) is in **early access** mode.  Therefore, you can log on, create instances, run jobs, and so on, but some functions are not available yet.  If you need to use functions that are not yet available, use [IBM Quantum Platform Classic](https://quantum.ibm.com/) or [Qiskit Runtime on IBM Cloud](https://cloud.ibm.com/quantum) instead.
 </Admonition>
 
 ## Benefits
@@ -44,7 +48,11 @@ The Lite Plan is deprecated and will be removed on 14 March 2025.
 
 ## Current IBM Quantum Platform users
 
-Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), you will now access the [updated version of IBM Quantum Platform](https://quantum.cloud.ibm.com/), which is integrated with IBM Cloud.  Because of this integration, all users need to follow the onboarding instructions before using the new platform.
+Instead of accessing [IBM Quantum Platform Classic](https://quantum.ibm.com/), you will now access the [upgraded version of IBM Quantum Platform](https://quantum.cloud.ibm.com/), which is integrated with IBM Cloud.  Because of this integration, all users need to follow the onboarding instructions before using the new platform.
+
+### Save results from IBM Quantum Platform Classic
+
+Jobs that were run on IBM Quantum Platform Classic are not available on the upgraded version of IBM Quantum Platform, and will not be available after 1 July, 2025.  Therefore it is important that you save any data that you want to keep prior to that date. See the [Save and retrieve jobs](/guides/save-jobs) guide for instructions.
 
 <span id="onboard"></span>
 ### Onboard
@@ -144,7 +152,7 @@ This transition enhances security, scalability, and user experience while keepin
 
 ### Steps to migrate
 
-* If you currently use the Standard Plan, you dont' have to do anything.  You'll just use the new [IBM Quantum Platform](https://quantum.cloud.ibm.com/) interface.
+* If you currently use the Standard Plan, you don't have to do anything.  You'll just use the new [IBM Quantum Platform](https://quantum.cloud.ibm.com/) interface.
 * If you currently use the Lite Plan (deprecated), you can switch to [using simulators locally](https://quantum.cloud.ibm.com/docs/migration-guides/local-simulators). Optionally, you can [create instances in the Open Plan,](#onboard) which lets you run jobs on quantum hardware.
 
 <Admonition type="important">
