--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -978,6 +978,9 @@
   }
  ],
  "metadata": {
+   "title": "AI Transpiler Introduction",
+ "description": "In this notebook, we will explore the key benefits of Qiskit AI-powered transpiler service and how it compares to traditional methods.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "ibm-learning-sabre",
    "language": "python",
