--- a/docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb
+++ b/docs/tutorials/generating-long-range-entanglement-with-measurements.ipynb
@@ -650,6 +650,9 @@
  ],
  "metadata": {
   "description": "Tutorial showing how to realize a Nishimori transition on a quantum processor",
+   "title": "Generating long-range entanglement with measurements",
+ "description": "This tutorial demonstrates how to realize a Nishimori phase transition on an IBM quantum processor.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
