--- a/docs/tutorials/heisenberg-chain.ipynb
+++ b/docs/tutorials/heisenberg-chain.ipynb
@@ -403,6 +403,9 @@
   }
  ],
  "metadata": {
+   "title": "Heisenberg chain",
+ "description": "Build, deploy, and run a Qiskit Pattern for simulating a Heisenberg chain and estimating its ground state energy.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
