--- a/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
+++ b/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
@@ -1263,6 +1263,9 @@
   }
  ],
  "metadata": {
+   "title": "Improving estimation of expectation values with Operator Backpropagation (OBP)",
+ "description": "In this tutorial we will implement a Qiskit pattern for simulating the quantum dynamics of a Heisenberg spin chain using qiskit-addon-obp",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
