--- a/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
+++ b/docs/tutorials/long-range-entanglement-with-limited-qubit-connectivity.ipynb
@@ -2107,6 +2107,9 @@
   }
  ],
  "metadata": {
+   "title": "Long-range entanglement with limited qubit connectivity",
+ "description": "This tutorial shows three different ways that can be used to generate long-range entanglement between qubits on a line, at varying distances between each other.",
+ "platform": "cloud",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
