Fix some issues

--- a/docs/guides/qasm-feature-table.mdx
+++ b/docs/guides/qasm-feature-table.mdx
@@ -3,8 +3,7 @@ title: OpenQASM 3 feature table
 description: A table of the language features included in OpenQASM 3.
 ---
 
-{/* cspell:ignore durationof */}
-{/* cspell:ignore negctrl */}
+{/* cspell:ignore negctrl, durationof */}
 
 # OpenQASM 3 feature table
 
