Fix CSpell being overly permissive (#2954)
Turns out `allowCompoundWords` is very dangerous.

---------

Co-authored-by: Rebecca Dimock <beckyd@us.ibm.com>

--- a/docs/guides/qunova-chemistry.ipynb
+++ b/docs/guides/qunova-chemistry.ipynb
@@ -5,7 +5,7 @@
    "id": "f7d9993f",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore ccsd ffsim pvdz Qunova HI-VQE AVAS Dooh pyscf nucmod GTO's lucj */}"
+    "{/* cspell:ignore ccsd, ffsim, pvdz, Qunova, HI-VQE, AVAS, Dooh, pyscf, nucmod, GTO's, lucj, pseudopotential, pseudopotentials, magmom, Jastrow, multireference */}"
    ]
   },
   {
