--- a/docs/guides/qiskit-addons-mpf.ipynb
+++ b/docs/guides/qiskit-addons-mpf.ipynb
@@ -5,7 +5,8 @@
    "id": "67e54fee-28ed-4ebe-bcb8-715aa06721a1",
    "metadata": {},
    "source": [
-    "# Multi-product formulas (MPF)"
+    "# Multi-product formulas (MPF)\n",
+    "{/* cspell:ignore Carrera, Multiproduct */}"
    ]
   },
   {
